[package]
name = "cloudflare-proxy-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"]}
ipnet = "2.9.0"
reqwest = { version = "0.11.22", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.35.0", features = ["full"] }
